// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calls onClick when clicked 1`] = `
.c0 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #0a789c;
  background-color: #0a789c;
  color: #ffffff;
  font-size: 1rem;
  padding: 6px 16px;
}

.c0:hover,
.c0:active {
  border-color: #0d9dcc;
  background-color: #0d9dcc;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(10,120,156,0.2);
}

<button
  class="c0"
  color="primary"
  type="button"
  variant="contained"
>
  Click me!
   
</button>
`;

exports[`Disabled button cannot be interacted with 1`] = `
.c0 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #0a789c;
  background-color: #0a789c;
  color: #ffffff;
  font-size: 1rem;
  padding: 6px 16px;
  cursor: not-allowed;
  opacity: 0.5;
}

.c0:hover,
.c0:active {
  border-color: #0d9dcc;
  background-color: #0d9dcc;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(10,120,156,0.2);
}

<button
  class="c0"
  color="primary"
  disabled=""
  type="button"
  variant="contained"
>
  Click me!
   
</button>
`;

exports[`Loading state button cannot be interacted with 1`] = `
.c2 {
  width: 35px;
  height: 35px;
  border-style: solid;
  border-color: rgba(0,0,0,0.1);
  border-top-color: #0a789c;
  border-radius: 50%;
  -webkit-animation: cilQsd;
  animation: cilQsd;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: cubic-bezier(0.215,0.61,0.355,1);
  animation-timing-function: cubic-bezier(0.215,0.61,0.355,1);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 17.5px;
  height: 17.5px;
  border-width: 2px;
}

.c1 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #0a789c;
  background-color: #0a789c;
  color: #ffffff;
  font-size: 1rem;
  padding: 6px 16px;
  cursor: progress;
  background-color: transparent;
  padding: 4px 16px;
  border: 2px solid #666;
  color: #666;
}

.c1:hover,
.c1:active {
  border-color: #0d9dcc;
  background-color: #0d9dcc;
}

.c1:focus {
  box-shadow: 0 0 0 3px rgba(10,120,156,0.2);
}

.c1:hover,
.c1:active {
  background-color: transparent;
  border-color: #808080;
  color: #808080;
}

.c1:focus {
  box-shadow: none;
}

.c1 > div.Oph-Spinner {
  margin-left: 0.5rem;
}

disabled:true .c0 > div {
  margin-left: 0.5rem;
}

<button
  class="c0 c1"
  color="primary"
  type="button"
  variant="contained"
>
  Click me!
   
  <div
    class="c2 Oph-Spinner"
    color="primary"
  />
</button>
`;

exports[`Loading state button displays Oph Spinner 1`] = `
.c2 {
  width: 35px;
  height: 35px;
  border-style: solid;
  border-color: rgba(0,0,0,0.1);
  border-top-color: #0a789c;
  border-radius: 50%;
  -webkit-animation: cilQsd;
  animation: cilQsd;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: cubic-bezier(0.215,0.61,0.355,1);
  animation-timing-function: cubic-bezier(0.215,0.61,0.355,1);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  width: 17.5px;
  height: 17.5px;
  border-width: 2px;
}

.c1 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #0a789c;
  background-color: #0a789c;
  color: #ffffff;
  font-size: 1rem;
  padding: 6px 16px;
  cursor: progress;
  background-color: transparent;
  padding: 4px 16px;
  border: 2px solid #666;
  color: #666;
}

.c1:hover,
.c1:active {
  border-color: #0d9dcc;
  background-color: #0d9dcc;
}

.c1:focus {
  box-shadow: 0 0 0 3px rgba(10,120,156,0.2);
}

.c1:hover,
.c1:active {
  background-color: transparent;
  border-color: #808080;
  color: #808080;
}

.c1:focus {
  box-shadow: none;
}

.c1 > div.Oph-Spinner {
  margin-left: 0.5rem;
}

disabled:true .c0 > div {
  margin-left: 0.5rem;
}

<button
  class="c0 c1"
  color="primary"
  type="button"
  variant="contained"
>
  Click me!
   
  <div
    class="c2 Oph-Spinner"
    color="primary"
  />
</button>
`;

exports[`Renders correctly with custom component ("as"-prop) 1`] = `
.c0 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #0a789c;
  background-color: #0a789c;
  color: #ffffff;
  font-size: 1rem;
  padding: 6px 16px;
}

.c0:hover,
.c0:active {
  border-color: #0d9dcc;
  background-color: #0d9dcc;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(10,120,156,0.2);
}

<div
  class="c0"
  color="primary"
  variant="contained"
>
  Button with custom component
   
</div>
`;

exports[`Renders correctly with custom size, variant, and color 1`] = `
.c0 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  padding: 4px 16px;
  border: 2px solid #666;
  color: #666;
  font-size: 0.85rem;
  padding: 2px 10px;
}

.c0:hover,
.c0:active {
  border-color: #808080;
  color: #808080;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(102,102,102,0.2);
}

<button
  class="c0"
  color="secondary"
  type="button"
  variant="outlined"
>
  Small outlined secondary button
   
</button>
`;

exports[`Renders correctly with defaults 1`] = `
.c0 {
  cursor: pointer;
  border: 0px none;
  box-shadow: 0 0 0 0 transparent;
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s, color 0.25s;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #0a789c;
  background-color: #0a789c;
  color: #ffffff;
  font-size: 1rem;
  padding: 6px 16px;
}

.c0:hover,
.c0:active {
  border-color: #0d9dcc;
  background-color: #0d9dcc;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(10,120,156,0.2);
}

<button
  class="c0"
  color="primary"
  type="button"
  variant="contained"
>
  Default button
   
</button>
`;
